--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">AbdulWorks</a>
+        <a class="navbar-brand" href="#">SaveGaza</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,7 +35,9 @@
           </ul>
         </div>
       </nav>
-      
+      <div class="text-box">
+        <h2>Donate To Palestine </h2>
+      </div>
 <div class="table-box">
         <div class="table-row table-head">
             <div class="table-cell first-cell">
